# idara_competitor_watcher

./: .gitignore  README.md  config.json  pyproject.toml  python_amazon_sp_api-1.6.23-py3-none-any.whl  requirements.txt
scripts/: retrive_competitor_info.py  transform_raw_data.py
scripts/competitor_watcher/: transform_raw_data.py
src/competitor_watcher/: __main__.py  load_data_into_db.py
src/competitor_watcher/data_analysis/: analyzer.py
src/competitor_watcher/data_loading/: __init__.py  data_preparation.py  loader.py  retrieve_competitor_info.py  retrieve_inventory.py  transform_raw_data.py
src/competitor_watcher/utils/: config_loader.py  db_management.py  db_operations.py  email_sender.py  load_credential.py  time_utils.py
